seaqt/QtWidgets/gen_qspinbox.nim

proc fcQDoubleSpinBox_override_virtual_event(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_event".}
proc fQDoubleSpinBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QDoubleSpinBox_virtualbase_inputMethodQuery".}
proc fcQDoubleSpinBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_inputMethodQuery".}
proc fQDoubleSpinBox_virtualbase_stepBy(self: pointer, steps: cint): void{.importc: "QDoubleSpinBox_virtualbase_stepBy".}
proc fcQDoubleSpinBox_override_virtual_stepBy(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_stepBy".}
proc fQDoubleSpinBox_virtualbase_clear(self: pointer, ): void{.importc: "QDoubleSpinBox_virtualbase_clear".}
proc fcQDoubleSpinBox_override_virtual_clear(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_clear".}
proc fQDoubleSpinBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_resizeEvent".}
proc fcQDoubleSpinBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_resizeEvent".}
proc fQDoubleSpinBox_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_keyPressEvent".}
proc fcQDoubleSpinBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_keyPressEvent".}
proc fQDoubleSpinBox_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_keyReleaseEvent".}
proc fcQDoubleSpinBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_keyReleaseEvent".}
proc fQDoubleSpinBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_wheelEvent".}
proc fcQDoubleSpinBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_wheelEvent".}
proc fQDoubleSpinBox_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_focusInEvent".}
proc fcQDoubleSpinBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_focusInEvent".}
proc fQDoubleSpinBox_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_focusOutEvent".}
proc fcQDoubleSpinBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_focusOutEvent".}
proc fQDoubleSpinBox_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_contextMenuEvent".}
proc fcQDoubleSpinBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_contextMenuEvent".}
proc fQDoubleSpinBox_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_changeEvent".}
proc fcQDoubleSpinBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_changeEvent".}
proc fQDoubleSpinBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_closeEvent".}
proc fcQDoubleSpinBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_closeEvent".}
proc fQDoubleSpinBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_hideEvent".}
proc fcQDoubleSpinBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_hideEvent".}
proc fQDoubleSpinBox_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_mousePressEvent".}
proc fcQDoubleSpinBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_mousePressEvent".}
proc fQDoubleSpinBox_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_mouseReleaseEvent".}
proc fcQDoubleSpinBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_mouseReleaseEvent".}
proc fQDoubleSpinBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_mouseMoveEvent".}
proc fcQDoubleSpinBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_mouseMoveEvent".}
proc fQDoubleSpinBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_timerEvent".}
proc fcQDoubleSpinBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_timerEvent".}
proc fQDoubleSpinBox_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_paintEvent".}
proc fcQDoubleSpinBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_paintEvent".}
proc fQDoubleSpinBox_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_showEvent".}
proc fcQDoubleSpinBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_showEvent".}
proc fQDoubleSpinBox_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QDoubleSpinBox_virtualbase_initStyleOption".}
proc fcQDoubleSpinBox_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_initStyleOption".}
proc fQDoubleSpinBox_virtualbase_stepEnabled(self: pointer, ): cint{.importc: "QDoubleSpinBox_virtualbase_stepEnabled".}
proc fcQDoubleSpinBox_override_virtual_stepEnabled(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_stepEnabled".}
proc fQDoubleSpinBox_virtualbase_devType(self: pointer, ): cint{.importc: "QDoubleSpinBox_virtualbase_devType".}
proc fcQDoubleSpinBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_devType".}
proc fQDoubleSpinBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QDoubleSpinBox_virtualbase_setVisible".}
proc fcQDoubleSpinBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_setVisible".}
proc fQDoubleSpinBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QDoubleSpinBox_virtualbase_heightForWidth".}
proc fcQDoubleSpinBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_heightForWidth".}
proc fQDoubleSpinBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QDoubleSpinBox_virtualbase_hasHeightForWidth".}
proc fcQDoubleSpinBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_hasHeightForWidth".}
proc fQDoubleSpinBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QDoubleSpinBox_virtualbase_paintEngine".}
proc fcQDoubleSpinBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_paintEngine".}
proc fQDoubleSpinBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_mouseDoubleClickEvent".}
proc fcQDoubleSpinBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_mouseDoubleClickEvent".}
proc fQDoubleSpinBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_enterEvent".}
proc fcQDoubleSpinBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_enterEvent".}
proc fQDoubleSpinBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_leaveEvent".}
proc fcQDoubleSpinBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_leaveEvent".}
proc fQDoubleSpinBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_moveEvent".}
proc fcQDoubleSpinBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_moveEvent".}
proc fQDoubleSpinBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_tabletEvent".}
proc fcQDoubleSpinBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_tabletEvent".}
proc fQDoubleSpinBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_actionEvent".}
proc fcQDoubleSpinBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_actionEvent".}
proc fQDoubleSpinBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_dragEnterEvent".}
proc fcQDoubleSpinBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_dragEnterEvent".}
proc fQDoubleSpinBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_dragMoveEvent".}
proc fcQDoubleSpinBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_dragMoveEvent".}
proc fQDoubleSpinBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_dragLeaveEvent".}
proc fcQDoubleSpinBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_dragLeaveEvent".}
proc fQDoubleSpinBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QDoubleSpinBox_virtualbase_dropEvent".}
proc fcQDoubleSpinBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_dropEvent".}
proc fQDoubleSpinBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QDoubleSpinBox_virtualbase_nativeEvent".}
proc fcQDoubleSpinBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_nativeEvent".}
proc fQDoubleSpinBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QDoubleSpinBox_virtualbase_metric".}
proc fcQDoubleSpinBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_metric".}
proc fQDoubleSpinBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QDoubleSpinBox_virtualbase_initPainter".}
proc fcQDoubleSpinBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_initPainter".}
proc fQDoubleSpinBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QDoubleSpinBox_virtualbase_redirected".}
proc fcQDoubleSpinBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_redirected".}
proc fQDoubleSpinBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QDoubleSpinBox_virtualbase_sharedPainter".}
proc fcQDoubleSpinBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_sharedPainter".}
proc fQDoubleSpinBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QDoubleSpinBox_virtualbase_inputMethodEvent".}
proc fcQDoubleSpinBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_inputMethodEvent".}
proc fQDoubleSpinBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QDoubleSpinBox_virtualbase_focusNextPrevChild".}
proc fcQDoubleSpinBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QDoubleSpinBox_override_virtual_focusNextPrevChild".}
